--- a/index.html
+++ b/index.html
@@ -11,7 +11,38 @@
 <body>
     <div id="viewer-container"></div>
 
-    <div class="ifc-tree-menu">
+    <div class="checkboxes">
+        <div>
+            <input checked="true" id="IFCWALLSTANDARDCASE" type="checkbox">
+            Walls
+        </div>
+        <div>
+            <input checked="true" id="IFCSLAB" type="checkbox">
+            Slabs
+        </div>
+        <div>
+            <input checked="true" id="IFCWINDOW" type="checkbox">
+            Windows
+        </div>
+        <div>
+            <input checked="true" id="IFCFURNISHINGELEMENT" type="checkbox">
+            Furniture
+        </div>
+        <div>
+            <input checked="true" id="IFCDOOR" type="checkbox">
+            Doors
+        </div>
+        <div>
+            <input checked="true" id="IFCMEMBER" type="checkbox">
+            Curtain wall structure
+        </div>
+        <div>
+            <input checked="true" id="IFCPLATE" type="checkbox">
+            Curtain wall plates
+        </div>
+    </div>
+
+    <!-- <div class="ifc-tree-menu">
         <ul id="myUL">
             <li id="tree-root">
                 <span class="caret">Beverages</span>
@@ -36,7 +67,7 @@
                 </ul>
             </li>
         </ul>
-    </div>
+    </div> -->
 
     <script src="bundle.js"></script>
 </body>
