--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <title>IFC.js</title>
 </head>
 <body>
-    <div id="viewer-container"></div>  
+    <div id="viewer-container"></div>
+    
+    <div class="button-container">
+        <input type="file" id="file-input">
+        <button id="save-button">Preprocess and save file</button>
+        <button id="load-button">Load Saved File</button>
+        <button id="remove-button">Remove cached file</button>
+    </div>
+    
     <script src="bundle.js"></script>
 </body>
 </html>
